--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,15 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
-        key: [d9fd30af-92c8-4394-81dd-ed92100791f2]
-        name: [homefix-dev]
-
     steps:
     - uses: actions/checkout@v2
       with:
@@ -24,10 +16,10 @@ jobs:
     - name: login
       uses: actions/heroku@master
       env:
-        HEROKU_API_KEY: ${{ matrix.key }}
+        HEROKU_API_KEY: d9fd30af-92c8-4394-81dd-ed92100791f2
       with:
         args: container:login
     - name: set remote
-      run: git remote set-url origin https://heroku:${{ matrix.key }}@git.heroku.com/{{matrix.name }}.git
+      run: git remote set-url origin https://heroku:d9fd30af-92c8-4394-81dd-ed92100791f2@git.heroku.com/homefix-dev.git
     - name: push and deploy
       run: git push origin HEAD:master -f
