--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,9 +14,9 @@ jobs:
       with:
         fetch-depth: 0
     - name: login
-      uses: nyakaz73/heroku-django-deploy@v0.68 
+      uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_app_name : homefix-dev
         heroku_api_key: d9fd30af-92c8-4394-81dd-ed92100791f2
-        heroku_email_address: 'yz7726@nyu.edu'
+        heroku_email: 'yz7726@nyu.edu'
         branch: "develop"
