--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.repository == 'gcivil-nyu-org/S2022-Team-4-repo'
     steps:
     - uses: actions/checkout@v2
       with:
