--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ install:
   - pip install coveralls
 
 before_script:
-  - python home_fix/manage.py migrate
-  - python home_fix/manage.py collectstatic --noinput
+  - cd home_fix
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
 
 script:
-  - cd home_fix
   - black --check .
   - flake8 .
   - coverage run --source=. manage.py test
