--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - cd ..
   - black --check .
   - flake8 .
+  - cd home_fix
   - coverage run --source=. manage.py test
 
 after_script:
