refactor: change test scope

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 script:
   - black --check .
   - flake8 .
-  - coverage run --source=. manage.py test
+  - coverage run --source=authentication manage.py test
 
 after_script:
   - coveralls
