--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_script:
   - echo “STRIPE_PUBLIC_KEY=$STRIPE_PUBLIC_KEY” >>.env
   - echo “STRIPE_SECRET_KEY=$STRIPE_SECRET_KEY” >>.env
   - echo “STRIPE_WEBHOOK_SECRET=$STRIPE_WEBHOOK_SECRET” >>.env
+  - echo “GOOGLE_MAPS_API_KEY=$GOOGLE_MAPS_API_KEY” >>.env
+  
   - cd home_fix
   - python manage.py migrate
   - python manage.py collectstatic --noinput
