--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - flake8 .
-  - coverage run --source=users,basic,map,service,user_center manage.py test
+  - coverage run --source=users,basic,map,service,user_center,forum manage.py test
 
 after_script:
   - coveralls
