--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,27 @@ asgiref==3.5.0
 atpublic==3.0.1
 attrs==21.4.0
 black==22.1.0
+boto3
 cffi==1.15.0
 click==8.0.4
-dj-database-url==0.5.0
 Django==4.0
+django-allauth==0.45.0
 django-crispy-forms==1.14.0
+dj-database-url==0.5.0
 django-heroku==0.3.1
+django-storages
 gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.1
+pillow
+pre-commit
 pycares==4.1.2
 pycparser==2.21
+python-decouple
 six==1.16.0
 sqlparse==0.4.2
 stripe==2.68.0
 tomli==2.0.1
 verify-email==2.4.3
 whitenoise==6.0.0
-django-allauth==0.45.0
-pre-commit
-python-decouple
-boto3
