--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 
 before_script:
   - echo “SECRET_KEY=$SECRET_KEY” >>.env
+  - echo “EMAIL_HOST_USER=$EMAIL_HOST_USER” >>.env
   - echo “EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD” >>.env
   - echo “GOOGLE_API_KEY=$GOOGLE_API_KEY” >>.env
   - echo “STRIPE_PUBLIC_KEY=$STRIPE_PUBLIC_KEY” >>.env
